Selección de acordes de la primera sección :')

--- a/src/veneno_libertad/main.tex
+++ b/src/veneno_libertad/main.tex
@@ -1,26 +1,28 @@
 %%novalidate
 
-\beginsong{Veneno libertad}[by={Ignacio Martinez}]
+\beginsong{Veneno Libertad}[by={Ignacio Martinez}]
+
+    \input{src/veneno_libertad/musical/intro}
 
     \beginverse
-        Perdido en otros ojos
-        No pude mirar los tuyos
-        Que teniéndolos enfrente
-        me llamaban "A susurros"
+        Per\[A]dido \[Asus2] en otros \[D]ojos\[Dsus2]
+        No \[Bm]pude mirar los \[Em]tuyos \[E7]
+        Que \[B7]teniéndolos en\[A#7dim]frente
+        me \[A]llamaban "\[F#m]A susu\[E7]rros"
     \endverse
     
     \beginverse    
-        Y "A diez pasos" de distancia
-        Miedo a lo desconocido
-        Esperaba una fogata
-        Tres cervezas, tú mi abrigo
+        Y "A \[F#m]diez pasos" de dis\[G#m]tancia
+        Miedo \[G#7]a lo descono\[C#]cido
+        Esperaba una fo\[G#m]gata
+        Tres cer\[F#m]vezas, tú mi a\[E]brigo \[E7]
     \endverse
     
     \beginverse    
-        Le robamos tiempo a la noche
-        Y bailamos... sin saber
-        Mas lo bueno poco dura
-        Te alejaste... sin querer
+        Le ro\[A]bamos tiempo a la \[ASus2]noche
+        Y bai\[D]lamos... sin sa\[Dmaj7]ber
+        Mas lo bueno poco \[Bm]dura
+        Te alejas\[F]te... sin que\[E]rer
     \endverse
     
     \beginverse
