--- a/config/catalogo_acordes.sty
+++ b/config/catalogo_acordes.sty
@@ -20,10 +20,32 @@
     \chordscheme[
         name = C,
 %%        position = 1, %%% Donde empieza el acorde
-        finger = {1/2 , 2/3, 3/4}
+        finger = {1/2, 2/4, 3/5}
 %       finger = {3/5}, %%% posicion, cuerda
 %       barre = 1/1-6,  %%% Traste, rango de cuerdas
 %       ring = {2,3,4}  %%% Cuerdas que se tocan, al inicio del acorde
+    ]
+}
+
+\newsavebox{\CVII}
+\savebox{\CVII}
+{
+    \chordscheme[
+        name = C7,
+        finger = {1/2, 2/4, 3/5, 3/3},
+        mute = 6
+    ]
+}
+
+\newsavebox{\CVIITrasteIII}
+\savebox{\CVIITrasteIII}
+{
+    \chordscheme[
+        name = C7,
+        position = 3,
+        barre = 1/1-5,
+        mute = 6,
+        finger = {3/2, 3/4}
     ]
 }
 
@@ -47,6 +69,18 @@
         position = 4,
         barre = 1/1-5,
         finger = {2/2, 3/3, 3/4},
+        mute = 6
+    ]
+}
+
+\newsavebox{\CSusTrasteIV}
+\savebox{\CSusTrasteIV}
+{
+    \chordscheme[
+        name = C{\#},
+        position = 4,
+        barre = 1/1-5,
+        finger = {3/2, 3/3, 3/4},
         mute = 6
     ]
 }
@@ -137,6 +171,16 @@
     ]
 }
 
+\newsavebox{\DSusII}
+\savebox{\DSusII}
+{
+    \chordscheme[
+        name = DSus2,
+        mute = 6,
+        finger = {2/3, 3/2}
+    ]
+}
+
 \newsavebox{\DSusVIIDim}
 \savebox{\DSusVIIDim}
 {
@@ -174,7 +218,7 @@
 {
     \chordscheme[
         name = E7,
-        finger = {1/3, 2/5}
+        finger = {1/3, 2/5, 3/2}
     ]
 }
 
@@ -319,6 +363,17 @@
     ]
 }
 
+\newsavebox{\GSusVII}
+\savebox{\GSusVII}
+{
+    \chordscheme[
+        name = G{\#}7,
+        position = 4,
+        barre = 1/1-6,
+        finger = {2/3, 3/5}
+    ]
+}
+
 %%% Acordes de La %%%
 \newsavebox{\A}
 \savebox{\A}
@@ -367,6 +422,25 @@
         name = Am7,
         mute = 6,
         finger = {1/2, 2/4}
+    ]
+}
+
+\newsavebox{\ASusII}
+\savebox{\ASusII}
+{
+    \chordscheme[
+        name = Asus2,
+        finger = {3/3, 3/4}
+    ]
+}
+
+\newsavebox{\ASusVIIDim}
+\savebox{\ASusVIIDim}
+{
+    \chordscheme[
+        name = ASus7Dim,
+        mute = 6,
+        finger = {1/5, 2/2, 2/4}
     ]
 }
 
